--- a/index.html
+++ b/index.html
@@ -18,7 +18,13 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li v-for="link in links" class="nav-item active">
-            <a class="nav-link" href="#">{{ link }} <span class="sr-only">(current)</span></a>
+            <a 
+              class="nav-link"
+              v-bind:href="link.url"
+              v-bind:title="`This link goes to the ${link.text} page`"
+            >{{ link.text }}
+            
+            </a>
           </li>
         </ul>
       </div>
@@ -32,7 +38,11 @@
       Vue.createApp({
         data() {
           return {
-            links: ["Home", "About", "Contact"]
+            links: [
+              {text: "Home", url: "index.html"},
+              {text: "About", url: "about.html"},
+              {text: "Contact", url: "contact.html"}
+            ]
           };
         }
       }).mount("nav");
