--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
-          <li v-for="link in links" class="nav-item active">
+          <li v-for="(link, index) in links" class="nav-item active" :key="index">
             <a 
               class="nav-link"
               v-bind:href="link.url"
