--- a/index.html
+++ b/index.html
@@ -5,55 +5,80 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vue Basics</title>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
-      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
+      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <a class="navbar-brand" href="#">Navbar</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
-        aria-expanded="false" aria-label="Toggle navigation">
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarNav"
+        aria-controls="navbarNav"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
-          <li v-for="(link, index) in links" class="nav-item active" :key="index">
-            <a 
+          <li
+            v-for="(page, index) in pages"
+            class="nav-item active"
+            :key="index"
+          >
+            <a
               class="nav-link"
-              v-bind:href="link.url"
-              v-bind:title="`This link goes to the ${link.text} page`"
-            >{{ link.text }}
-            
+              v-bind:href="page.link.url"
+              v-bind:title="`This link goes to the ${page.link.text} page`"
+              @click.prevent="activePage = index" 
+              >{{ page.link.text }}
             </a>
+            <!-- 
+              @click.prevent="activePage = index" is the equivalent of 
+              v-on:click.prevent="activePage = index" 
+              Where .prevent prevents the navigation to a different url upon click
+            -->
           </li>
         </ul>
       </div>
     </nav>
     <div id="content" class="container">
-      <h1>{{ pageTitle }}</h1>
-      <p>{{ content }}</p>
+      <h1>{{ pages[activePage].pageTitle }}</h1>
+      <p>{{ pages[activePage].content }}</p>
     </div>
 
     <script>
       Vue.createApp({
         data() {
           return {
-            links: [
-              {text: "Home", url: "index.html"},
-              {text: "About", url: "about.html"},
-              {text: "Contact", url: "contact.html"}
-            ]
+            activePage: 0,
+            pages: [
+              {
+                link: { text: "Home", url: "index.html" },
+                pageTitle: "Hello, Vue",
+                content: "This is the home content",
+              },
+              {
+                link: { text: "About", url: "about.html" },
+                pageTitle: "Hello, Vue",
+                content: "This is the about content",
+              },
+              {
+                link: { text: "Contact", url: "contact.html" },
+                pageTitle: "Hello, Vue",
+                content: "This is the contact content",
+              },
+            ],
           };
-        }
-      }).mount("nav");
-      Vue.createApp({
-        data() {
-          return {
-            pageTitle: "Hello, Vue",
-            content: "Welcome to the wonderful world of Vue"
-          };
-        }
-      }).mount("#content");
+        },
+      }).mount("body");
     </script>
   </body>
 </html>
