--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
     />
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="#">Navbar</a>
+    <nav 
+      class="navbar navbar-expand-lg"
+      :class="{'navbar-dark bg-dark': useDarkNavbar, 'navbar-light bg-light' : !useDarkNavbar}"
+    >
+      <a class="navbar-brand" href="index.html">Navbar</a>
       <button
         class="navbar-toggler"
         type="button"
@@ -30,11 +33,12 @@
         <ul class="navbar-nav">
           <li
             v-for="(page, index) in pages"
-            class="nav-item active"
+            class="nav-item"
             :key="index"
           >
             <a
               class="nav-link"
+              :class="{active: activePage == index}"
               v-bind:href="page.link.url"
               v-bind:title="`This link goes to the ${page.link.text} page`"
               @click.prevent="activePage = index" 
@@ -46,8 +50,14 @@
               Where .prevent prevents the navigation to a different url upon click
             -->
           </li>
-        </ul>
-      </div>
+        </div>
+        <form class="d-flex">
+          <button 
+            class="btn btn-primary"
+            @click.prevent="useDarkNavbar = !useDarkNavbar"
+            >Toggle color</button>
+        </form>
+      </ul>
     </nav>
     <div id="content" class="container">
       <h1>{{ pages[activePage].pageTitle }}</h1>
@@ -59,6 +69,7 @@
         data() {
           return {
             activePage: 0,
+            useDarkNavbar: true,
             pages: [
               {
                 link: { text: "Home", url: "index.html" },
@@ -67,12 +78,12 @@
               },
               {
                 link: { text: "About", url: "about.html" },
-                pageTitle: "Hello, Vue",
+                pageTitle: "About page",
                 content: "This is the about content",
               },
               {
                 link: { text: "Contact", url: "contact.html" },
-                pageTitle: "Hello, Vue",
+                pageTitle: "Contact page",
                 content: "This is the contact content",
               },
             ],
